WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50492
[chromium] fix 2 bugs with inspector tests in DRT
https://bugs.webkit.org/show_bug.cgi?id=50492
Summary
[chromium] fix 2 bugs with inspector tests in DRT
Tony Chang
Reported
2010-12-03 15:12:57 PST
[chromium] fix 2 bugs with inspector tests in DRT
Attachments
Patch
(4.55 KB, patch)
2010-12-03 15:25 PST
,
Tony Chang
no flags
Details
Formatted Diff
Diff
Patch
(4.66 KB, patch)
2010-12-03 16:44 PST
,
Tony Chang
tkent
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tony Chang
Comment 1
2010-12-03 15:25:41 PST
Created
attachment 75557
[details]
Patch
Kent Tamura
Comment 2
2010-12-03 15:52:48 PST
Comment on
attachment 75557
[details]
Patch LGTM
Tony Chang
Comment 3
2010-12-03 16:44:32 PST
Created
attachment 75580
[details]
Patch
Tony Chang
Comment 4
2010-12-03 16:45:32 PST
Sorry, I was removing elements from the tasklist while iterating over it. Switched to using "while (!m_tasks.isEmpty())".
Tony Chang
Comment 5
2010-12-06 09:35:19 PST
Committed
r73373
: <
http://trac.webkit.org/changeset/73373
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug